--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-bootstrap": "^1.0.0-beta.17",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1",
+    "react-scroll-to-top": "^1.0.5",
     "react-window": "^1.8.5",
     "styled-components": "^5.0.1"
   },
