--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "node-notifier": "^8.0.1",
     "object-path": "0.11.5",
     "react": "^16.13.1",
-    "react-bootstrap": "^1.0.0-beta.17",
+    "react-bootstrap": "^1.6.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
