--- a/package.json
+++ b/package.json
@@ -8,13 +8,17 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.21.1",
-    "bootstrap": "^4.4.1",
+    "bootstrap": "^4.6.2",
     "gh-pages": "^2.2.0",
     "immer": "^8.0.1",
+    "jquery": "^3.6.0",
     "node-notifier": "^8.0.1",
     "object-path": "0.11.5",
+    "otp-input-react": "^0.3.0",
+    "popper.js": "^1.16.1",
     "react": "^16.13.1",
-    "react-bootstrap": "^1.6.1",
+    "react-bootstrap": "^1.6.5",
+    "react-bootstrap-modal": "^4.2.0",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
